# pytest-approval

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Jenkinsfile  README.md  inbox.md  pyproject.toml  sonar-project.properties
pytest_approval/: __init__.py  compare.py  config.py  definitions.py  main.py  plugin.py  scrub.py
scripts/: generate.py  release.sh  test_main.py--test_verify_gnu_diff_tools_approver.2.approved.txt
tests/: conftest.py  test_compare.py  test_config.py  test_main.py  test_main.py--test_use_approved_dir.2.approved.txt  test_main.py--test_verify_json[{"b"- 100, "a"- null}].approved.json  test_main.py--test_verify_json_sort.approved.json  test_main.py--test_verify_string[------------reporter1].approved.txt  test_main.py--test_verify_string[------------reporter1].received.txt  test_main.py--test_verify_string[------------reporter2].approved.txt  test_main.py--test_verify_string[2098913525].approved.txt  test_main.pytest_verify_json[json0].approved.json  test_name.py  test_scrub.py  test_verify.py  test_verify_binary.py  test_verify_image.py  test_verify_json.py  test_verify_plotly.py  test_write.py
tests/approvals/: test_main.py--test_verify_all_reporter[2090552909].approved.json  test_main.py--test_verify_all_reporter[217168578].approved.json  test_main.py--test_verify_all_reporter[3947468741].approved.json  test_main.py--test_verify_all_reporter[reporters0].approved.json  test_main.py--test_verify_all_reporter[reporters1].approved.json  test_main.py--test_verify_all_reporter[reporters3].approved.json  test_main.py--test_verify_all_reporter[reporters4].approved.json  test_main.py--test_verify_all_reporter[reporters6].approved.json  test_main.py--test_verify_ci.2.approved.txt  test_main.py--test_verify_gnu_diff_tools_approver.2.approved.txt  test_main.py--test_verify_pycharm_reporter_w_absolute_path.approved.json  test_main.py--test_verify_string_scrub_datetime.approved.txt  test_main.py--test_verify_string_scrub_multiple.approved.txt  test_main.py--test_verify_string_scrub_uuid.approved.txt  test_verify_binary.py--test_verify_binary_ci[.jpeg].approved.txt  test_verify_binary.py--test_verify_binary_ci[.jpg].approved.txt  test_verify_binary.py--test_verify_binary_ci[.png].approved.txt  test_verify_binary.py--test_verify_binary_ci[1944416854].2.approved.txt  test_verify_binary.py--test_verify_binary_ci[3623929066].2.approved.txt  (+8 more)
(+2 files in other folders)
