[project]
name = "pytest-approval"
version = "0.1.0"
description = "A simple approval test library utilizing external diff programs such as PyCharm and Visual Studio Code to compare approved and received output."
readme = "README.md"
license = "LGPL-3.0-only"
authors = [{email="ohsome@heigit.org"}]
classifiers = ["Framework :: Pytest"]
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest-cov>=7.0.0",
    "pytest-subprocess>=1.5.3",
    "ruff==0.12.5", # in sync w/ pre-commit
]

[project.optional-dependencies]
image = [
    "numpy>=2.3.1",
    "pillow>=11.3.0"
]

[project.entry-points.pytest11]
pytest_approval = "pytest_approval.plugin"

[build-system]
requires = ["uv_build>=0.7.5"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle Error
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-nameing
    "Q",    # flake8-quotes
    "W",    # pycodestyle Warning
    "C90",  # mccabe
    "TRY",  # tryceratops
    "RUF",  # ruff-specific rules
    "FURB", # refurb
    "PERF", # perflint
    "S",    # bandit
    "B",    # bugbear
    "SIM",  # simplify
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101"]  # S101 usage of asserts

[tool.pytest-approval]
"approvals-dir"="tests/approvals"
